Update patient detail page
