# backend/src/generated/java/src/main/java/ch/uzh/ifi/imrg/generated/model/ExerciseComponentUpdateInputDTOPatientAPI.java
@@ -20,9 +20,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.annotation.JsonValue;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 
@@ -100,7 +97,7 @@ public class ExerciseComponentUpdateInputDTOPatientAPI {
   private String fileType;
 
   public static final String JSON_PROPERTY_FILE_DATA = "fileData";
-  private List<byte[]> fileData;
+  private byte[] fileData;
 
   public static final String JSON_PROPERTY_ORDER_NUMBER = "orderNumber";
   private Integer orderNumber;
@@ -238,36 +235,28 @@ public class ExerciseComponentUpdateInputDTOPatientAPI {
   }
 
 
-  public ExerciseComponentUpdateInputDTOPatientAPI fileData(List<byte[]> fileData) {
+  public ExerciseComponentUpdateInputDTOPatientAPI fileData(byte[] fileData) {
     
     this.fileData = fileData;
     return this;
   }
 
-  public ExerciseComponentUpdateInputDTOPatientAPI addFileDataItem(byte[] fileDataItem) {
-    if (this.fileData == null) {
-      this.fileData = new ArrayList<>();
-    }
-    this.fileData.add(fileDataItem);
-    return this;
-  }
-
    /**
-   * Get fileData
+   * File data encoded in Base64
    * @return fileData
   **/
   @javax.annotation.Nullable
   @JsonProperty(JSON_PROPERTY_FILE_DATA)
   @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
 
-  public List<byte[]> getFileData() {
+  public byte[] getFileData() {
     return fileData;
   }
 
 
   @JsonProperty(JSON_PROPERTY_FILE_DATA)
   @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-  public void setFileData(List<byte[]> fileData) {
+  public void setFileData(byte[] fileData) {
     this.fileData = fileData;
   }
 
@@ -311,13 +300,13 @@ public class ExerciseComponentUpdateInputDTOPatientAPI {
         Objects.equals(this.exerciseComponentDescription, exerciseComponentUpdateInputDTO.exerciseComponentDescription) &&
         Objects.equals(this.fileName, exerciseComponentUpdateInputDTO.fileName) &&
         Objects.equals(this.fileType, exerciseComponentUpdateInputDTO.fileType) &&
-        Objects.equals(this.fileData, exerciseComponentUpdateInputDTO.fileData) &&
+        Arrays.equals(this.fileData, exerciseComponentUpdateInputDTO.fileData) &&
         Objects.equals(this.orderNumber, exerciseComponentUpdateInputDTO.orderNumber);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, exerciseComponentType, exerciseComponentDescription, fileName, fileType, fileData, orderNumber);
+    return Objects.hash(id, exerciseComponentType, exerciseComponentDescription, fileName, fileType, Arrays.hashCode(fileData), orderNumber);
   }
 
   @Override
